# access_guard_management_api

./: README.md  alembic.ini  pyproject.toml
alembic/: README
alembic/sqls/: init.sql
alembic/versions/: 0e03e20ac3b5_add_resource_name_for_iam_built_in_roles.py  4773194387a1_add_unique_indexes.py  6ac078846683_add_synthetic_support_for_roles_and_.py  c61ab9cd53db_add_iam_built_in_roles.py
config/: config.json
deployment/: Dockerfile
deployment/values/: values.demo.yaml  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
migrations/: README
migrations/sql/: 0006_create_policy_refresh_hooks.sql  0008_rename_role_permission_table.sql  0008_rename_role_permission_table__down.sql  0009_rename_user_permission_table.sql  0009_rename_user_permission_table__down.sql  0010_rename_user_roles_table.sql  0010_rename_user_roles_table__down.sql  0011_rename_webhooks_table.sql  0011_rename_webhooks_table__down.sql  0012_org_scope.sql  0012_org_scope__down.sql  0013_synthetic_roles.sql  0013_synthetic_roles__down.sql  init.sql
migrations/versions/: 0001_init_iam_tables_create_iam_base_tables.py  0002_built_in_roles_create_smc_access_manager_built_in_roles.py  0003_role_org_admin_org_admin_built_in_role.py  0004_synthetic_roles_pattern_add_synthetic_pattern_to_specific_roles.py  0005_role_policies_unique_add_role_policies_unique_index.py  0006_hooks_table_create_policy_refresh_hooks_table.py  0007_unique_constraints_add_unique_constraints.py  0008_rename_tables_rename_role_permissions_table.py  0009_rename_tables_rename_user_permissions_table.py  (+4 more)
(+84 files in other folders)
