[tool.poetry]
name = "access-manager-api"
version = "0.1.0"
description = ""
authors = ["yuriscom <yuriscom@gmail.com>"]
readme = "README.md"
packages = [{ include = "access_manager_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = ">=2.0.39,<3.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.2.1,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
PyJWT = ">=2.8.0,<3.0.0"
# # Add access-guard as local editable dependency
# access-guard = {path = "../access-guard", develop = true}
access-guard = { path = "../access-guard", develop = false }
# access-guard = { git = "https://github.com/Stagwell-Marketing-Cloud/smc-access-guard.git", branch = "developer" }



[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
